# serde-stuff

./: Cargo.toml  README.md
src/: base64.rs  lib.rs  option_base64.rs  option_string_or_struct.rs  option_vec_or_one.rs  string_or_struct.rs  vec_or_one.rs
