[package]
name = "serde-stuff"
version = "0.2.2"
description = "Commonly used Serde utilities"
edition = "2021"
license = "MIT or Apache-2.0"
authors = ["David Skyberg <davidskybeg@gmail.com"]
documentation = "https://docs.rs/crate/serde-stuff"
repository = "https://github.com/dskyberg/serde-stuff"
homepage = "https://github.com/dskyberg/serde-stuff"
keywords = ["serde"]
readme = "README.md"

[dependencies]
base64 = "0.21.3"
serde = { version = "1.0.188", features = ["derive"] }
void = "1.0.2"

[dev-dependencies]
serde_json = "1.0.105"
serde_with = "3.3.0"
